--- a/register.css
+++ b/register.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: black;
@@ -15,7 +14,8 @@ body {
 }
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -24,7 +24,8 @@ input[type=text], input[type=password] {
   background: #f1f1f1;
 }
 
-input[type=text]:focus, input[type=password]:focus {
+input[type=text]:focus,
+input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
@@ -61,12 +62,13 @@ a {
   background-color: #f1f1f1;
   text-align: center;
 }
+
 .padding-bottom {
   padding-bottom: 10px;
   font-size: 17px;
   font-weight: 600;
 }
 
-.form-check-input{
+.form-check-input {
   font-size: 30px;
 }
