--- a/static/styles.css
+++ b/static/styles.css
@@ -54,6 +54,10 @@ li:hover {
   background-color: #ece8ff;
 }
 
+a > .active {
+  background-color: #ece8ff;
+}
+
 .sidebar > .center > ul span {
   font-size: 13px;
   font-weight: 600;
@@ -61,7 +65,14 @@ li:hover {
   margin-left: 10px;
 }
 
-.addbook {
+.addbook,
+.addBill,
+.mngBook,
+.mngMember,
+.createBill,
+.dashboard,
+.mngBill,
+.bookDetail {
   display: flex;
 }
 
@@ -69,43 +80,76 @@ li:hover {
   flex: 6;
 }
 
-.addBill {
-  display: flex;
-}
-
-.addBill-container {
-  flex: 6;
-}
-.mngBook {
-  display: flex;
-}
-
-.mngBook-container {
-  flex: 6;
-}
-
-.mngMember {
-  display: flex;
-}
-
-.mngMember-container {
-  flex: 6;
-}
-.createBill {
-  display: flex;
-}
-
-.createBill-container {
+.addbook-container,
+.addBill,
+.addBill-container,
+.mngBook-container,
+.mngMember-container,
+.createBill-container,
+.createBill-container,
+.mngBill-container,
+.bookDetail-container,
+.dashboard-container {
   flex: 6;
 }
 
-.mngBill {
-  display: flex;
+.mngBook-subcontainer,
+.mngMember-subcontainer,
+.mngBill-subcontainer {
+  margin: 0px 50px 30px 20px;
 }
 
-.mngBill-container {
-  flex: 6;
+.mngBook-subcontainer,
+.mngBill-subcontainer > .search-bar {
+  margin-top: 20px;
 }
+
+.status-checkbox {
+  margin-top: 20px;
+}
+
+.table {
+  margin-top: 50px;
+}
+.back-btn {
+  height: 52px;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Inter;
+  font-size: 18px;
+  line-height: 28px;
+  color: #171a1fff;
+  background: #00000000;
+  opacity: 1;
+  border: none;
+  border-radius: 12px;
+  gap: 8px;
+}
+
+.a-text-bold {
+  font-weight: 700 !important;
+}
+
+.welcome {
+  margin-top: 50px;
+  margin-left: 50px;
+}
+
+.top5-book,
+.top5-member {
+  margin: 100px 30px 50px 70px;
+}
+.top5-book > h6,
+.top5-member > h6 {
+  margin-bottom: 30px;
+}
+
+.billOption-form {
+  margin-left: 60px;
+}
+
 /* .bottom {
   display: flex;
   align-items: center;
